--- a/src/styles/Favorites.css
+++ b/src/styles/Favorites.css
@@ -8,7 +8,7 @@
   }
   
   .listing {
-    position: relative; /* Ensures positioning of fav button */
+    position: relative; 
     background: #fff;
     overflow: hidden;
     border-radius: 2rem;
@@ -131,6 +131,7 @@
     align-items: center;
     width: 100%;
     text-align: center;
+    margin: auto 0px;
   }
   
   #noListings {
